@@ -66,6 +66,10 @@ version 2.92
 	lease is created _only_ when the --dhcp-authoritative option is
 	set. This matches the behavior of the DHCPv4 server.
 
+	Add --dhcp-split-relay option. This makes a DHCPv4 relay which
+	is functional when client and server networks aren't mutually
+	route-able.
+
 	
 version 2.91
 	Fix spurious "resource limit exceeded messages". Thanks to 
